fix vote flag placement on mobile
[ch6435]

--- a/web/apps/atelier-des-idees/src/components/VoteButton/_style.scss
+++ b/web/apps/atelier-des-idees/src/components/VoteButton/_style.scss
@@ -22,9 +22,7 @@
 @media #{$mobile} {
   .vote-button-flag {
     font-size: 18px;
-    right: 0;
-    left: 0;
-    margin: auto;
+    right: 9px;
   }
 }
 
